--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-jackson</artifactId>
+            <version>8.18.0</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
