Update application.properties: configure Feign clients and change server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=app
 
-crimsonsun.service.url =  https://itunes.apple.com
+spring.cloud.openfeign.client.config.itunes-client.url = https://itunes.apple.com
+spring.cloud.openfeign.client.config.sample-server-shawn-mendes-client.url= http://localhost:8080
+
+server.port=8082
